--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="8dp"
         android:text="0"
         android:textSize="48sp"
@@ -24,7 +24,7 @@
         android:id="@+id/textB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:text="0"
         android:textColor="@color/white"
@@ -34,7 +34,7 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="340dp"
+        android:layout_width="360dp"
         android:layout_height="370dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,19 +43,120 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="120dp"
+            android:weightSum="4">
+
+            <Button
+                android:id="@+id/button_9"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="9" />
+
+            <Button
+                android:id="@+id/button_8"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="8" />
+
+            <Button
+                android:id="@+id/button_7"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="7" />
+
+            <Button
+                android:id="@+id/button_divide"
+                style="@style/Button2"
+                android:layout_weight="1"
+                android:text="/" />
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button_6"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="6" />
+
+            <Button
+                android:id="@+id/button_5"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="5" />
+
+            <Button
+                android:id="@+id/button_4"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="4" />
+
+            <Button
+                android:id="@+id/button_multiply"
+                style="@style/Button2"
+                android:layout_weight="1"
+                android:text="*" />
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="84dp">
+
+            <Button
+                android:id="@+id/button_3"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="3" />
+
+            <Button
+                android:id="@+id/button_2"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="2" />
+
+            <Button
+                android:id="@+id/button_1"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="1" />
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/Button2"
+                android:layout_weight="1"
+                android:text="-" />
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button_clr"
+                style="@style/Button3"
+                android:layout_weight="1"
+                android:text="CLR" />
+
+            <Button
+                android:id="@+id/button_0"
+                style="@style/Button1"
+                android:layout_weight="1"
+                android:text="0" />
+
+            <Button
+                android:id="@+id/button_equal"
+                style="@style/Button3"
+                android:layout_weight="1"
+                android:text="=" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/Button2"
+                android:layout_weight="1"
+                android:text="+" />
+        </TableRow>
     </TableLayout>
 
 
