--- a/app/src/main/res/layout/activity_indications.xml
+++ b/app/src/main/res/layout/activity_indications.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:background="@color/gray"
+            android:background="@color/gray_light"
             android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
