--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_light">#FF333333</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#F99709</color>
-    <color name="gray">#EBE9E9</color>
+    <color name="gray">#7F7F7F</color>
+    <color name="gray_light">#EBE9E9</color>
 </resources>
