--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         app:srcCompat="@drawable/telemath_sin_fondo" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_Telemath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button_indicaciones"
+        android:id="@+id/button_indications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -81,26 +81,28 @@
         android:layout_marginEnd="30dp"
         android:text="INDICACIONES"
         android:backgroundTint="@color/orange"
+        android:background="@drawable/shape4"
         android:padding="15dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_Telemath" />
 
     <Button
-        android:id="@+id/button_calcular"
+        android:id="@+id/button_calculator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/orange"
+        android:background="@drawable/shape4"
         android:padding="15dp"
         android:text="CALCULAR"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_indicaciones" />
+        app:layout_constraintTop_toBottomOf="@+id/button_indications" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
