--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -134,7 +134,7 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button_clr"
+                android:id="@+id/button_clear"
                 style="@style/Button3"
                 android:layout_weight="1"
                 android:text="CLR" />
@@ -146,7 +146,7 @@
                 android:text="0" />
 
             <Button
-                android:id="@+id/button_equal"
+                android:id="@+id/button_equals"
                 style="@style/Button3"
                 android:layout_weight="1"
                 android:text="=" />
