--- a/app/src/main/res/layout/activity_indications.xml
+++ b/app/src/main/res/layout/activity_indications.xml
@@ -25,35 +25,30 @@
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="420sp"
         android:layout_marginTop="20dp"
         android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:scrollbars="vertical">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:background="@color/gray_light"
-            android:padding="16dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:padding="16dp">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="375dp"
-                android:text="¡Bienvenido a nuestra Calculadora Virtual: TeleMath!
-
-                Esta calculadora está diseñada para ayudarte a realizar operaciones matemáticas de manera rápida
-                y sencilla. Puedes utilizar los botones numéricos (0-9) para ingresar tus números, selecciona los
-                botones de operación (+, -, *, /) para realizar sumas, restas, multiplicaciones y divisiones
-                respectivamente. Debes usar el botón de igual (=) para obtener el resultado de tu operación, se
-                tiene el botón CLR que borra tu entrada. Además, tenemos una sección “Historial” donde se
-                visualizará los resultados obtenidos. "
+                android:layout_width="wrap_content"
+                android:layout_height="600sp"
+                android:text="@string/text_indications"
                 android:textSize="24sp" />
 
         </LinearLayout>
@@ -61,20 +56,20 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button_calcular"
+        android:id="@+id/button_calculator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
+        android:background="@drawable/shape4"
         android:backgroundTint="@color/orange"
         android:padding="15dp"
         android:text="CALCULAR"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView"
-        app:layout_constraintVertical_bias="0.55" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
