--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="orange">#F99709</color>
     <color name="gray">#7F7F7F</color>
     <color name="gray_light">#EBE9E9</color>
+    <color name="blue">#0000FF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
 </resources>
